Colaboratory kullanılarak oluşturuldu

--- a/tubi.ipynb
+++ b/tubi.ipynb
@@ -5,13 +5,14 @@
     "colab": {
       "name": "tubi.ipynb",
       "provenance": [],
+      "collapsed_sections": [],
       "mount_file_id": "1QFGmnwxAn_oBGC-O1h8P5LHlp03qU-MZ",
-      "authorship_tag": "ABX9TyPf7+QVB3ngjJgsVHBWezu4",
+      "authorship_tag": "ABX9TyNhuFQB1qLoCKnrPvusOvgi",
       "include_colab_link": true
     },
     "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
+      "display_name": "Python 3",
+      "name": "python3"
     },
     "language_info": {
       "name": "python"
@@ -35,38 +36,39 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "KAJCF8STnWyx",
-        "outputId": "08f14d0a-4a21-41a8-feec-9352e66f0852"
+        "outputId": "5fdd1f4e-d43d-4d77-e6a3-9a8d37b3b2a3"
       },
       "source": [
         "import numpy as np \n",
         "import pandas as pd\n",
+        "from keras.optimizers import SGD\n",
         "from keras.preprocessing import image\n",
         "from os.path import join\n",
         "from PIL import Image\n",
         "from scipy import misc\n",
-        "from sklearn.model_selection import train_test_split\n",
         "from keras.models import Sequential\n",
         "import tensorflow as tf\n",
         "import matplotlib.pyplot as plt\n",
-        "from sklearn.model_selection import train_test_split\n",
         "from keras.preprocessing.image import ImageDataGenerator\n",
         "from keras.preprocessing import image\n",
         "from sklearn.model_selection import train_test_split\n",
-        "from keras.layers import Input, Dense, Convolution2D, MaxPooling2D, UpSampling2D, Softmax\n",
+        "from keras.layers import Input, Dense, Convolution2D, MaxPooling2D, UpSampling2D, Softmax, ZeroPadding2D\n",
         "from tensorflow.keras import datasets, layers, models\n",
         "from tensorflow import keras\n",
         "from tensorflow.keras import layers\n",
+        "from keras.layers.core import Flatten, Dense, Dropout \n",
+        "from keras.layers import Dense, Conv2D, MaxPool2D , Flatten\n",
+        "from tensorflow.keras.applications.vgg16 import VGG16\n",
+        "from tensorflow.keras.preprocessing import image\n",
+        "from tensorflow.keras.applications.vgg16 import preprocess_input\n",
+        "from tensorflow.keras.utils import plot_model\n",
         "\n",
-        "data = pd.read_csv(\"/content/drive/MyDrive/Colab Notebooks/SWIMSEG/metadata.csv\")\n",
-        "#data.head()\n",
-        "number = data[\"Number\"]\n",
-        "#print(number)\n",
         "\n",
         "train_datagen = ImageDataGenerator(\n",
         "        rescale=1./255,\n",
         "        shear_range=0.2,\n",
         "        zoom_range=0.2,\n",
-        "        vertical_flip=False,\n",
+        "        vertical_flip=True,\n",
         "        horizontal_flip=True,\n",
         "        rotation_range=90,\n",
         "        width_shift_range=0.1,\n",
@@ -75,13 +77,13 @@
         "test_datagen = ImageDataGenerator(rescale=1./255)\n",
         "\n",
         "train_generator = train_datagen.flow_from_directory(\n",
-        "        '/content/drive/MyDrive/Colab Notebooks/SWIMSEG/train/',\n",
+        "        '/content/drive/MyDrive/Colab Notebooks/train',\n",
         "        target_size=(150, 150),\n",
         "        batch_size=32,\n",
         "        class_mode='categorical')\n",
         "\n",
         "validation_generator = test_datagen.flow_from_directory(\n",
-        "        '/content/drive/MyDrive/Colab Notebooks/SWIMSEG/train/',\n",
+        "        '/content/drive/MyDrive/Colab Notebooks/train',\n",
         "        target_size=(150, 150),\n",
         "        batch_size=32,\n",
         "        class_mode='categorical')\n",
@@ -89,7 +91,7 @@
         "\n",
         "#print(train_generator)\n",
         "#print(validation_generator)\n",
-        "\n",
+        "\"\"\"\n",
         "model = keras.Sequential()\n",
         "\n",
         "model.add(layers.Conv2D(32, (3, 3), activation='relu', input_shape=(150, 150, 3)))\n",
@@ -98,8 +100,14 @@
         "model.add(layers.MaxPooling2D((2, 2)))\n",
         "model.add(layers.Conv2D(64, (3, 3), activation='relu'))\n",
         "model.add(layers.Flatten())\n",
+        "model.add(Dropout(0.5))\n",
         "model.add(layers.Dense(2,activation = \"softmax\" ))\n",
         "model.summary()\n",
+        "\"\"\"\n",
+        "\n",
+        "model = VGG16()\n",
+        "model.summary()\n",
+        "\n",
         "\n",
         "model.compile(loss='categorical_crossentropy', optimizer='adam', metrics=['accuracy'])\n",
         "\n",
@@ -112,56 +120,58 @@
         "        #steps_per_epoch = len(X_train)\n",
         "## Sonra drop out ve batch normalization ekleyerek modeli optimize edebilirsiniz"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Found 1000 images belonging to 2 classes.\n",
-            "Found 1000 images belonging to 2 classes.\n",
-            "Model: \"sequential_18\"\n",
+            "Found 2026 images belonging to 2 classes.\n",
+            "Found 2026 images belonging to 2 classes.\n",
+            "Model: \"sequential\"\n",
             "_________________________________________________________________\n",
             "Layer (type)                 Output Shape              Param #   \n",
             "=================================================================\n",
-            "conv2d_53 (Conv2D)           (None, 148, 148, 32)      896       \n",
+            "conv2d (Conv2D)              (None, 148, 148, 32)      896       \n",
             "_________________________________________________________________\n",
-            "max_pooling2d_36 (MaxPooling (None, 74, 74, 32)        0         \n",
+            "max_pooling2d (MaxPooling2D) (None, 74, 74, 32)        0         \n",
             "_________________________________________________________________\n",
-            "conv2d_54 (Conv2D)           (None, 72, 72, 64)        18496     \n",
+            "conv2d_1 (Conv2D)            (None, 72, 72, 64)        18496     \n",
             "_________________________________________________________________\n",
-            "max_pooling2d_37 (MaxPooling (None, 36, 36, 64)        0         \n",
+            "max_pooling2d_1 (MaxPooling2 (None, 36, 36, 64)        0         \n",
             "_________________________________________________________________\n",
-            "conv2d_55 (Conv2D)           (None, 34, 34, 64)        36928     \n",
+            "conv2d_2 (Conv2D)            (None, 34, 34, 64)        36928     \n",
             "_________________________________________________________________\n",
-            "flatten_13 (Flatten)         (None, 73984)             0         \n",
+            "flatten (Flatten)            (None, 73984)             0         \n",
             "_________________________________________________________________\n",
-            "dense_15 (Dense)             (None, 2)                 147970    \n",
+            "dropout (Dropout)            (None, 73984)             0         \n",
+            "_________________________________________________________________\n",
+            "dense (Dense)                (None, 2)                 147970    \n",
             "=================================================================\n",
             "Total params: 204,290\n",
             "Trainable params: 204,290\n",
             "Non-trainable params: 0\n",
             "_________________________________________________________________\n",
             "Epoch 1/10\n",
-            "32/32 [==============================] - ETA: 0s - loss: 0.4676 - accuracy: 0.7684WARNING:tensorflow:Your input ran out of data; interrupting training. Make sure that your dataset or generator can generate at least `steps_per_epoch * epochs` batches (in this case, 800 batches). You may need to use the repeat() function when building your dataset.\n",
-            "32/32 [==============================] - 64s 2s/step - loss: 0.4595 - accuracy: 0.7728 - val_loss: 5.9065e-04 - val_accuracy: 1.0000\n",
+            "32/32 [==============================] - ETA: 0s - loss: 0.4950 - accuracy: 0.7731 WARNING:tensorflow:Your input ran out of data; interrupting training. Make sure that your dataset or generator can generate at least `steps_per_epoch * epochs` batches (in this case, 800 batches). You may need to use the repeat() function when building your dataset.\n",
+            "32/32 [==============================] - 752s 24s/step - loss: 0.4870 - accuracy: 0.7772 - val_loss: 0.0134 - val_accuracy: 0.9965\n",
             "Epoch 2/10\n",
-            "32/32 [==============================] - 45s 1s/step - loss: 0.0046 - accuracy: 0.9985\n",
+            "32/32 [==============================] - 49s 2s/step - loss: 0.0489 - accuracy: 0.9891\n",
             "Epoch 3/10\n",
-            "32/32 [==============================] - 45s 1s/step - loss: 0.2566 - accuracy: 0.9708\n",
+            "32/32 [==============================] - 49s 2s/step - loss: 0.0194 - accuracy: 0.9949\n",
             "Epoch 4/10\n",
-            "32/32 [==============================] - 45s 1s/step - loss: 0.0132 - accuracy: 0.9987\n",
+            "32/32 [==============================] - 49s 2s/step - loss: 0.0177 - accuracy: 0.9971\n",
             "Epoch 5/10\n",
-            "32/32 [==============================] - 45s 1s/step - loss: 0.0133 - accuracy: 0.9976\n",
+            "32/32 [==============================] - 50s 2s/step - loss: 0.0267 - accuracy: 0.9971\n",
             "Epoch 6/10\n",
-            "32/32 [==============================] - 45s 1s/step - loss: 1.7099e-04 - accuracy: 1.0000\n",
+            "32/32 [==============================] - 50s 2s/step - loss: 0.0190 - accuracy: 0.9967\n",
             "Epoch 7/10\n",
-            "32/32 [==============================] - 45s 1s/step - loss: 0.0074 - accuracy: 0.9985\n",
+            "32/32 [==============================] - 50s 2s/step - loss: 0.0160 - accuracy: 0.9955\n",
             "Epoch 8/10\n",
-            "32/32 [==============================] - 45s 1s/step - loss: 5.8409e-05 - accuracy: 1.0000\n",
+            "32/32 [==============================] - 50s 2s/step - loss: 0.0056 - accuracy: 0.9988\n",
             "Epoch 9/10\n",
-            "32/32 [==============================] - 45s 1s/step - loss: 4.6228e-05 - accuracy: 1.0000\n",
+            "32/32 [==============================] - 53s 2s/step - loss: 0.0376 - accuracy: 0.9944\n",
             "Epoch 10/10\n",
-            "32/32 [==============================] - 45s 1s/step - loss: 0.0022 - accuracy: 0.9990\n"
+            "32/32 [==============================] - 49s 2s/step - loss: 0.0141 - accuracy: 0.9963\n"
           ],
           "name": "stdout"
         },
@@ -169,13 +179,13 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<tensorflow.python.keras.callbacks.History at 0x7f4d02780b50>"
+              "<tensorflow.python.keras.callbacks.History at 0x7f30f15aee90>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 21
+          "execution_count": 1
         }
       ]
     }
