Colaboratory kullanılarak oluşturuldu

--- a/tubi.ipynb
+++ b/tubi.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1QFGmnwxAn_oBGC-O1h8P5LHlp03qU-MZ",
-      "authorship_tag": "ABX9TyNSMU3X9LUNru5zsbZoboBR",
+      "authorship_tag": "ABX9TyMKodctfTlqcy07huJB0Nn5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -93,23 +93,29 @@
         "#print(train_generator)\n",
         "#print(validation_generator)\n",
         "\n",
+        "tf.keras.applications.VGG16(\n",
+        "    include_top=True,\n",
+        "    weights=\"imagenet\",\n",
+        "    input_tensor=None,\n",
+        "    input_shape=None,\n",
+        "    pooling=None,\n",
+        "    classes=1000,\n",
+        "    classifier_activation=\"softmax\",\n",
+        ")\n",
         "\n",
-        "model = VGG16()\n",
-        "model.summary()\n",
-        "\n",
-        "\n",
-        "model.compile(loss='categorical_crossentropy', optimizer='adam', metrics=['accuracy'])\n",
-        "\n",
-        "model.fit(\n",
-        "        train_generator,\n",
-        "        steps_per_epoch=32,\n",
-        "        epochs=10,\n",
-        "        validation_data=validation_generator,\n",
-        "        validation_steps=800)\n",
+        "#model = VGG16()\n",
+        "#model.summary()\n",
+        "#model.compile(loss='categorical_crossentropy', optimizer='adam', metrics=['accuracy'])\n",
+        "#model.fit(\n",
+        "        #train_generator,\n",
+        "        #steps_per_epoch=32,\n",
+        "        #epochs=10,\n",
+        "        #validation_data=validation_generator,\n",
+        "        #validation_steps=800)\n",
         "        #steps_per_epoch = len(X_train)\n",
         "## Sonra drop out ve batch normalization ekleyerek modeli optimize edebilirsiniz"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
